Add open rewrite changes