@@ -49,29 +49,29 @@ class AuthorizationPropertiesTest {
     @Test
     public void configurationLoadTest() {
         assertEquals(3, authorizationProperties.getSecurityConstraints().size());
-        assertEquals(2, authorizationProperties.getSecurityConstraints().get(0).getAuthRoles().length);
-        assertEquals("ACTIVITI_USER", authorizationProperties.getSecurityConstraints().get(0).getAuthRoles()[0]);
-        assertEquals("ACTIVITI_ADMIN", authorizationProperties.getSecurityConstraints().get(0).getAuthRoles()[1]);
-        assertEquals(2, authorizationProperties.getSecurityConstraints().get(0).getSecurityCollections().length);
+        assertEquals(2, authorizationProperties.getSecurityConstraints().getFirst().getAuthRoles().length);
+        assertEquals("ACTIVITI_USER", authorizationProperties.getSecurityConstraints().getFirst().getAuthRoles()[0]);
+        assertEquals("ACTIVITI_ADMIN", authorizationProperties.getSecurityConstraints().getFirst().getAuthRoles()[1]);
+        assertEquals(2, authorizationProperties.getSecurityConstraints().getFirst().getSecurityCollections().length);
         assertEquals(
             2,
-            authorizationProperties.getSecurityConstraints().get(0).getSecurityCollections()[0].getPatterns().length
+            authorizationProperties.getSecurityConstraints().getFirst().getSecurityCollections()[0].getPatterns().length
         );
         assertEquals(
             1,
-            authorizationProperties.getSecurityConstraints().get(0).getSecurityCollections()[1].getPatterns().length
+            authorizationProperties.getSecurityConstraints().getFirst().getSecurityCollections()[1].getPatterns().length
         );
         assertEquals(
             "/v1/*",
-            authorizationProperties.getSecurityConstraints().get(0).getSecurityCollections()[0].getPatterns()[0]
+            authorizationProperties.getSecurityConstraints().getFirst().getSecurityCollections()[0].getPatterns()[0]
         );
         assertEquals(
             "/v1/abc/*",
-            authorizationProperties.getSecurityConstraints().get(0).getSecurityCollections()[0].getPatterns()[1]
+            authorizationProperties.getSecurityConstraints().getFirst().getSecurityCollections()[0].getPatterns()[1]
         );
         assertEquals(
             "/v1/def/*",
-            authorizationProperties.getSecurityConstraints().get(0).getSecurityCollections()[1].getPatterns()[0]
+            authorizationProperties.getSecurityConstraints().getFirst().getSecurityCollections()[1].getPatterns()[0]
         );
         assertEquals(1, authorizationProperties.getSecurityConstraints().get(1).getSecurityCollections().length);
         assertEquals(
